dining: Fix sub-nav so that it collapses at the tablet breakpoint and add extra padding to the side of the page.

--- a/middlebury.edu/2015/sass/dining/dining.scss
+++ b/middlebury.edu/2015/sass/dining/dining.scss
@@ -16,9 +16,32 @@
 // Custom Styles
 .taskbar, .breadcrumb, .midd_dining .jumpnav-anchor { display:none; }
 
-.navigation { font-family: "Whitney SSm A", "Whitney SSm B", verdana, sans-serif; background-color: #619565; text-transform: uppercase; }
+.page { padding-left:26px; padding-right:27px; }
+
+.navigation { font-family: "Whitney SSm A", "Whitney SSm B", verdana, sans-serif; text-transform: uppercase; }
+  .navigation li { background-color: #619565; }
   .navigation a { color:#ffffff; }
   .navigation > ul > li > a { text-decoration:none; border:none; }
   .navigation > ul > li > a:hover { background-color:#73A2E6; }
+
+@media (min-width: 480px) {
+  .nav-justified>li, .nav-tabs.nav-justified>li {
+    display:block;
+    width:auto;
+  }
+  .nav-justified>li>a, .nav-tabs.nav-justified>li>a {
+    margin-bottom:5px;
+    border:0;
+  }
+}
+@media (min-width: 768px) {
+  .nav-justified>li, .nav-tabs.nav-justified>li {
+    display:table-cell;
+    width:1%;
+  }
+  .nav-justified>li>a, .nav-tabs.nav-justified>li>a {
+    margin-bottom:0;
+  }
+}
 
 .view-content h3 { background-color:#73A2E6; color:#ffffff; text-align:center; }
